﻿2014-11-12
- Correction de bug sur l'utilisation d'une fonction dépréciée (calcul_mysql_in remplacée par sql_in) dans plusieurs fichiers.

2013-04-10
- Modification des fichiers de création de la structure du formulaire pour être conforme à la norme RGAA
	- forms_champ_select.html ajout de l'attr title dans les select
	- forms_structure.html ajout de l'attr title l'aide + un rel="no-follow"

2013-01-30
- corrections des fonctions SQL /action/instituer_forms_donnee.php
- corrections des fonctions SQL /action/forms_duplique.php
- corrections des fonctions SQL /inc/forms_tables_affichage.php
- corrections des fonctions SQL /inc/instituer_forms_donnee.php
- corrections des fonctions SQL /exec/puce_statut_forms_donnee.php
- Modification du CSS pour le changement de status sans JS /donnees_tous.css
- Modification pour afficher le changement de statut "rapide" des données avec les puces (comme pour les articles)

2012-12-26
- corrections des fonctions SQL /exec/donnees_tous.php
- corrections des fonctions SQL /exec/donnees_edit.php
- corrections de fonctions SQL /inc/forms_tables_affichage.php
- corrections du bug d'affichage des données /fonds/donnees_tous.html (erreur : http://contrib.spip.net/Form-Table-2-5#forum464059)


2012-12-18
- ajout d'une fonction si elle n'est pas déjà présente dans interface.js
- correction dans instituer_forms_donnee.php bug sur le changement de statut d'une réponse.

2012-10-18
- mises en commentaire temporaire des lignes utilisant la fonction : afficher_objets dépendante de couteau suisse.

2012-10-09
- intégration dans le plugin des images anciennement récupérer dans le backoffice de spip
- Correction d'une erreur javascript "cQuery(this).initcrayons is not a function" dans la liste des données

2012-10-08
- correction d'un bug qui empêche l'insertion coté public sans être identifié.

2012-08-30
Migration du plugin de spip2 en spip3
- Création d'un paquet.xml