@@ -49,7 +49,7 @@ div.liste { clear:both;width:auto; }
 	width: 20px;
 	height: 16px;
 	text-align: center;
-	background: url(img_pack/filter.gif) no-repeat center left; 
+	background: url(filter.gif) no-repeat center left; 
 	float: right;
 	cursor: pointer;
 }
