@@ -1,3 +1,3 @@
-<BOUCLE_f(FORMS){id_form}>
+<BOUCLE_f(FORMS){id_form}{tout}>
 #FORMS
 </BOUCLE_f>
